# daemon

./: .gitignore  Cargo.toml  app.py  commit.sh  update.sh
launcher/: Cargo.toml
launcher/bintest/: Cargo.toml  test.sh  update.sh
launcher/bintest/src/: main.rs
launcher/src/: localstore.rs  main.rs
refactor/: Cargo.toml
refactor/src/: localstore.rs  main.rs  main_event_loop.rs  models.rs  pre_event_loop.rs
refactor/src/api/: mod.rs
refactor/src/api/models/: mod.rs
refactor/src/api/requests/: mod.rs
rs-daemon/: .gitignore  Cargo.toml
rs-daemon/inner_daemon/: Cargo.toml  mock.py
rs-daemon/inner_daemon/src/: filesystem.rs  main.rs  models.rs
rs-daemon/src/: filesystem.rs  main.rs  models.rs
src/: executor.rs  localstore.rs  main.rs  main_event_loop.rs  models.rs  pre_event_loop.rs  test_commons.rs
src/api/: models.rs  requests.rs
src/api/requests/: fetch_commands.rs  mod.rs  register_device.rs  update_command_status.rs
