[package]
name = "rs-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jfs = "0.9.0"
lazy_static = "1.4.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
subprocess = "0.2.9"
sys-info = "0.9.1"
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.5"
